--- a/_config.yml
+++ b/_config.yml
@@ -2,14 +2,14 @@ title: "Rep(i,n)"
 author: "Siddhartha Srivastava"
 description: "Really cool blog about ... something"
 more: "read more »"
-url: "https://niklasbuschmann.github.io/"
+url: "https://ssriva1998.github.io/"
 baseurl: ""
 paginate: 2
 permalink: pretty
 excerpt_separator: "\n\n\n" # two blank lines
 
 style:
-  minimalist: false
+  minimalist: true
   dark: false
 
 navigation:
@@ -23,8 +23,8 @@ navigation:
 
 links: # see http://fontawesome.io/icons/#brand for all possible icons
   #- twitter: "https://twitter.com/twitter/"
-  - github: "https://github.com/niklasbuschmann/contrast"
-  - envelope: "mailto:niklas.buschmann@posteo.de"
+  - github: "https://github.com/ssriva1998"
+  - envelope: "mailto:ssriva1998@gmail.com"
 
 defaults: [{scope: {path: ""}, values: {layout: "default"}}, {scope: {path: "", type: "posts"}, values: {comments: true}}]
 sass: {style: expanded}
