--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ navigation:
   - index.html
   - archive.html
   - about.md
-  - books.md
+  - personal.md
 
 # comments:
 #  disqus: "disqus-contrast"
