--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ links: # see http://fontawesome.io/icons/#brand for all possible icons
   - envelope: "mailto:ssriva1998@gmail.com"
 
 mathjax: true
+jax: ["input/TeX","output/CommonHTML"]
 
 defaults: [{scope: {path: ""}, values: {layout: "default"}}, {scope: {path: "", type: "posts"}, values: {comments: true}}]
 sass: {style: expanded}
